Fixed break and Windows accent problem

--- a/Worktime/App.config
+++ b/Worktime/App.config
@@ -16,7 +16,7 @@
   <userSettings>
     <Worktime.Properties.Settings>
       <setting name="SelectedAccent" serializeAs="String">
-        <value>Crimson</value>
+        <value>Windows Accent</value>
       </setting>
       <setting name="SelectedTheme" serializeAs="String">
         <value>BaseDark</value>
@@ -31,7 +31,7 @@
         <value>False</value>
       </setting>
       <setting name="SelectedState" serializeAs="String">
-        <value>NI</value>
+        <value>RP</value>
       </setting>
     </Worktime.Properties.Settings>
   </userSettings>
