--- a/Worktime/Properties/Settings.settings
+++ b/Worktime/Properties/Settings.settings
@@ -1,11 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)"
-              GeneratedClassNamespace="Worktime.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Worktime.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="SelectedAccent" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Crimson</Value>
+      <Value Profile="(Default)">Windows Accent</Value>
     </Setting>
     <Setting Name="SelectedTheme" Type="System.String" Scope="User">
       <Value Profile="(Default)">BaseDark</Value>
@@ -20,7 +18,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="SelectedState" Type="System.String" Scope="User">
-      <Value Profile="(Default)">NI</Value>
+      <Value Profile="(Default)">RP</Value>
     </Setting>
   </Settings>
 </SettingsFile>
