--- a/Worktime/packages.config
+++ b/Worktime/packages.config
@@ -12,5 +12,6 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="NLog" version="4.5.6" targetFramework="net461" />
   <package id="PublicHoliday" version="2.0.2" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="XAMLMarkupExtensions" version="1.3.0" targetFramework="net461" />
 </packages>
