--- a/Worktime/packages.config
+++ b/Worktime/packages.config
@@ -13,6 +13,7 @@
   <package id="MunkiWinchester.WpfUtility" version="0.9.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="NLog" version="4.5.6" targetFramework="net461" />
+  <package id="NuGet.CommandLine" version="4.7.1" targetFramework="net461" developmentDependency="true" />
   <package id="PublicHoliday" version="2.0.2" targetFramework="net461" />
   <package id="SharpCompress" version="0.17.1" targetFramework="net461" />
   <package id="Splat" version="1.6.2" targetFramework="net461" />
