--- a/Worktime/App.config
+++ b/Worktime/App.config
@@ -10,29 +10,8 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
-  <userSettings>
-    <Worktime.Properties.Settings>
-      <setting name="SelectedAccent" serializeAs="String">
-        <value>Windows Accent</value>
-      </setting>
-      <setting name="SelectedTheme" serializeAs="String">
-        <value>BaseDark</value>
-      </setting>
-      <setting name="Top" serializeAs="String">
-        <value>50</value>
-      </setting>
-      <setting name="Left" serializeAs="String">
-        <value>50</value>
-      </setting>
-      <setting name="IsAlwaysOnTop" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="SelectedState" serializeAs="String">
-        <value>RP</value>
-      </setting>
-    </Worktime.Properties.Settings>
-  </userSettings>
   <runtime>
+    <legacyUnhandledExceptionPolicy enabled="1" />
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="SharpCompress" publicKeyToken="afb0a02973931d96" culture="neutral" />
