--- a/Worktime/NLog.config
+++ b/Worktime/NLog.config
@@ -6,10 +6,15 @@
       throwExceptions="false"
       internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
     <targets>
-      <target name="file" xsi:type="File"
-              fileName="${basedir}\Log\${windows-identity:domain=false}.${shortdate}.log" createDirs="true"
+      <target name="file"
+              xsi:type="File"
+              fileName="${windows-identity:domain=false}.${shortdate}.log" 
+              createDirs="true"
               layout="${longdate} | ${level:uppercase=true} | ${message}${onexception:|EXCEPTION OCCURRED\:${exception:format=tostring}}"
-              deleteOldFileOnStartup="false" archiveEvery="Monday" enableArchiveFileCompression="true"/>
+              deleteOldFileOnStartup="false"
+              archiveEvery="Monday"
+              maxArchiveFiles="7"
+              enableArchiveFileCompression="true"/>
     </targets>
   <rules>
     <logger name ="*" minlevel="Trace" writeTo="file" />
