--- a/Worktime/Worktime.nuspec
+++ b/Worktime/Worktime.nuspec
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>Worktime</id>
-    <version>1.1.2</version>
+    <version>1.1.3</version>
     <title>Worktime</title>
     <authors>Eike Stremlau</authors>
     <owners>Eike Stremlau</owners>
